[tool.poetry]
name = "graphs"
version = "0.1.0"
description = ""
authors = ["Andres Velez <andres.velez.e@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch-geometric = "^2.6.1"
torch = "^2.5.1"
pandas = "^2.2.3"
sentence-transformers = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
